Atualizado o index html para versao do site em contrução

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Primeira versao do arquivo</h1>
-    
+    <div style="text-align: center;" >
+    <h1>Site em contrução</h1>
+    <p>Volte novamente mais tarde</p>
+    </div>
 </body>
 </html>
