Adicionando mensagem de suporte para os clientes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div style="text-align: center;" >
     <h1>Site em contrução</h1>
     <p>Volte novamente mais tarde</p>
+    <p>Para mais informaçãoes contate o desenvolvedor responsável</p>
     </div>
 </body>
 </html>
