--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h1>Site em contrução</h1>
         <p>Volte novamente mais tarde</p>
         <p>Para mais informaçãoes contate o desenvolvedor responsável</p>
+        <button class="btn btn-dark">Ligar para o suporte</button>
 
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
